--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".add_admin"></activity>
+        <activity android:name=".admin_master"></activity>
+        <activity android:name=".admin_display" />
+        <activity android:name=".admin_verify" />
+        <activity android:name=".add_admin" />
         <activity android:name=".add_service" />
         <activity android:name=".worker_display" />
         <activity android:name=".customer_display" />
@@ -19,8 +22,6 @@
         <activity android:name=".salary" />
         <activity android:name=".customer_registration" />
         <activity android:name=".customer_login" />
-        <activity android:name=".trial" />
-        <activity android:name=".display" />
         <activity android:name=".worker_registration" />
         <activity android:name=".MainActivity">
             <intent-filter>
