--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".customer_confirm_appointment"></activity>
+        <activity android:name=".customer_pending_appointment" />
+        <activity android:name=".customer_new_appointment" />
         <activity android:name=".worker_all_display" />
         <activity android:name=".admin_master" />
         <activity android:name=".admin_display" />
@@ -24,7 +27,7 @@
         <activity android:name=".customer_registration" />
         <activity android:name=".customer_login" />
         <activity android:name=".worker_registration" />
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
         <activity android:name=".splash_screen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
