--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".customer_edit_details"></activity>
         <activity android:name=".worker_pending" />
         <activity android:name=".worker_options" />
         <activity android:name=".worker_confirm" />
